<resources>
    <string name="app_name">TradConnect</string>

    <string name="txt_iniciosesion">Inicio de Sesión</string>
    <string name="inp_correo">Correo</string>
    <string name="inp_contrasenia">Contraseña</string>
    <string name="btn_acceder">Acceder</string>

    <!--String de nav_menu-->
    <string name="nav_inicio">Inicio</string>
    <string name="nav_reputacion">Reputacion</string>
    <string name="nav_reclamos">Reclamos</string>
    <string name="nav_oportunidades">Oportunidades</string>
    <string name="nav_perfil">Mi Perfil</string>

    <!-- Strings de item_cliente-->
    <string name="txt_nombre">Nombre </string>
    <string name="txt_direccion">Dirección</string>
    <string name="txt_fechapedido">Fecha del ultimo pedido</string>

    <!--String de fragment Inicio-->
    <string name="txt_clientesrecientes">Clientes Recientes</string>
</resources>