<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:foreground="@drawable/borde"
    app:cardBackgroundColor="@color/terracota"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

    <TextView
        android:id="@+id/txt_nombrecliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_nombre"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txt_direcioncliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/beige"
        android:text="@string/txt_direccion" />

    <TextView
        android:id="@+id/txt_fechapedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/beige"
        android:text="@string/txt_fechapedido" />

    </LinearLayout>
</androidx.cardview.widget.CardView>